--- a/FrontEnd/src/app/modules/main/components/shared/notifications/notifications.component.scss
+++ b/FrontEnd/src/app/modules/main/components/shared/notifications/notifications.component.scss
@@ -35,8 +35,7 @@
             }
         }
         .notifications-wrapper {
-            min-height: 35vh;
-            max-height: 50vh;
+            min-height: 48vh;
             display: flex;
             flex-direction: column;
             overflow-y: auto;
